# SOK_Project__Graph_Explorer_Platform_

./: .gitignore  README.md  run_django.ps1  run_django.sh  run_flask.ps1  run_flask.sh  test.ps1  test.sh
api/: pyproject.toml
api/src/: __init__.py
block_visualizer/: pyproject.toml
block_visualizer/src/block_visualizer/: __init__.py  plugin.py
block_visualizer/test_block_visualizer/: test_block_visualizer.py
csv_plugin/: pyproject.toml
csv_plugin/csv_plugin/: __init__.py  csv_datasource_plugin.py  csv_datasource_plugin_test.py
flask/: app.py
json_plugin/: pyproject.toml
json_plugin/json_plugin/: __init__.py  json_datasource_plugin.py  json_datasource_plugin_test.py
platform/: pyproject.toml
platform/data/: ciclic_graph.xml  cyclic.csv  cyclic.json  cyclic.xml  large.csv  large_graph.xml  large_graph_multiple_refs.xml  sample.csv  sample.json  sample.xml
platform/src/: __init__.py
platform/src/platform/: __init__.py  cli.py  graph_service.py  plugin_registry.py  workspace.py
platform/src/platform/dtos/: MessageDTO.py  MessageResponseDTO.py  PluginDTO.py  WorkspaceDTO.py
platform/src/platform/views/: graph_visualizer_cli_view.py  graph_visualizer_filterview_view.py  graph_visualizer_main_view.py  graph_visualizer_treeview_view.py  graph_visualizer_vispicker_view.py  graph_visualizer_workspace_manager_view.py
platform/templates/: graph-visualizer-birdview-body.html  graph-visualizer-birdview-script.html  graph-visualizer-birdview-style.html  graph-visualizer-cli-body.html  graph-visualizer-cli-script.html  graph-visualizer-cli-style.html  graph-visualizer-filterview-body.html  graph-visualizer-filterview-script.html  graph-visualizer-filterview-style.html  graph-visualizer-mainview-body.html  graph-visualizer-mainview-script.html  graph-visualizer-mainview-style.html  graph-visualizer-treeview-body.html  graph-visualizer-treeview-script.html  graph-visualizer-treeview-style.html  graph-visualizer-vispicker-body.html  graph-visualizer-vispicker-script.html  graph-visualizer-vispicker-style.html  graph-visualizer-workspace-body.html  graph-visualizer-workspace-script.html  graph-visualizer-workspace-style.html  visualizer-plugin-example.html
simple_visualizer/: pyproject.toml
simple_visualizer/src/simple_visualizer/: __init__.py  plugin.py
simple_visualizer/test_simple_visualizer/: test_simple_visualizer.py
xml_plugin/: pyproject.toml
xml_plugin/xml_plugin/: tests.py  xml_datasource_plugin.py  xml_datasource_plugin_test.py
(+16 files in other folders)
