[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-visualizer-datasource-json"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "graph-api"
]

[project.entry-points."graph.data_source"]
datasource_json = "json_plugin.json_datasource_plugin:JsonDataSource"

[tool.setuptools.packages.find]
where = ["."]
