[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-platform"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "graph-api",
    "django>=4.0",
    "jinja2>=3.1.6"
]

[tool.setuptools.data-files]
templates = ["templates/*"]
data      = ["data/*"]

[tool.setuptools.packages.find]
where = ["src"]