[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-visualizer-plugin"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "graph-api",
]

[project.entry-points."graph.visualizer"]
simple = "simple_visualizer.plugin:SimpleVisualizerPlugin"

[tool.setuptools.packages.find]
where = ["src"]