[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-visualizer-datasource-xml"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "graph-api"
]

[project.entry-points."graph.data_source"]
datasource_db = "xml_plugin.xml_datasource_plugin:XmlDataSource"

[tool.setuptools.packages.find]
where = ["."]